--- a/Sea of Steel/App.xaml
+++ b/Sea of Steel/App.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Sea_of_Steel"
-             x:Class="Sea_of_Steel.App">
+             xmlns:local="clr-namespace:SeaOfSteel"
+             x:Class="SeaOfSteel.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -12,4 +12,3 @@
         </ResourceDictionary>
     </Application.Resources>
 </Application>
-
