--- a/Sea of Steel/Sea Of Steel/Pages/WikiPage.xaml
+++ b/Sea of Steel/Sea Of Steel/Pages/WikiPage.xaml
@@ -2,15 +2,25 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SeaOfSteel.Pages.WikiPage"
              Title="Wiki des Navires">
-    <VerticalStackLayout Padding="10">
-        <Label Text="Selectionnez une nation :" FontSize="20" />
+
+    <StackLayout Padding="10">
+        <Label Text="Choisissez un pays :" FontAttributes="Bold" />
         <Picker x:Name="PaysPicker" SelectedIndexChanged="OnPaysChanged" />
-        <ListView x:Name="NaviresListView">
+            <ListView x:Name="NaviresListView" ItemTapped="NaviresListView_ItemTapped"
+                  HasUnevenRows="True" SeparatorVisibility="Default">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Nom}" />
+                    <ViewCell>
+                        <StackLayout Orientation="Horizontal" Padding="5">
+                            <Image Source="{Binding ImageUrl}" WidthRequest="60" HeightRequest="60" />
+                            <StackLayout Margin="10,0,0,0">
+                                <Label Text="{Binding Titre}" FontAttributes="Bold" FontSize="16" />
+                                <Label Text="{Binding Annee}" FontSize="12" TextColor="Gray"/>
+                            </StackLayout>
+                        </StackLayout>
+                    </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-    </VerticalStackLayout>
+    </StackLayout>
 </ContentPage>
